test/type-error-2.err.expect
test/type-error-2.ktn:3:1: error: cannot solve scalar type constraint [t1] (output of __add_vector) = int (from baz)
test/type-error-2.ktn:3:9: note: int (from baz) is from here
test/type-error-2.ktn:4:12: note: [t1] (output of __add_vector) is from here
