test/type-error-2.ktn
// TODO(strager): Improve error reporting.

def baz @a ([a] [char] -> int):
  ->x; [x] __add_vector
